GpgME++ provides the flags ThrowKeyIds and EncryptWrap, but does not pass them through to GpgME. Moreover, GpgME++ lacks support for GpgME's GPGME_ENCRYPT_WANT_ADDRESS encryption flag.
Description
Description
Revisions and Commits
Revisions and Commits
| rGPGMEPP Gpgme plus plus | |||
| rGPGMEPPbde2597f2117 cpp: Pass ThrowKeyIds and EncryptWrap flags to GpgME | |||
| rGPGMEPP631a7b96aae3 cpp: Support all encryption flags | |||
| rM GPGME | |||
| rM3e31f648e513 cpp: Support all encryption flags | |||
| rM70aaf05a6a3e cpp: Pass ThrowKeyIds and EncryptWrap flags to GpgME | |||
Related Objects
Related Objects
- Mentioned In
- T6341: Release GPGME 1.19.0